objects/tfn_VicBio_Region__c.object
<CustomObject>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_VicBioRegion_Area__c</fullName>
        <label>VicBio Region Area</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_VicBio_Region_Area_Percentage__c</fullName>
        <label>VicBio Region Area Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>VicBio Region</label>
    <nameField>
        <label>VicBio Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VicBio Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>